Ticket #13596 (closed defect: fixed)

Opened 19 months ago

Last modified 7 months ago

wx.DD_NEW_DIR_BUTTON not having an effect in 2.9/Cocoa

Reported by: nat_echols Owned by:
Priority: normal Milestone: 2.9.2
Component: wxOSX-Cocoa Version: 2.9-svn
Keywords: wxOSX-Cocoa wxPython wx.DirSelector Cc:
Blocked By: Patch: no
Blocking:

Description

As the summary says - passing the style flag wx.DD_NEW_DIR_BUTTON to wx.DirSelector on wxPython 2.9.2.* with the wxOSX-Cocoa backend does not result in a "New folder" button in the directory dialog. (This is on both OS 10.6 and 10.7.)

Change History

Changed 7 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [72815]) Fix the use of obsolete wxDD_NEW_DIR_BUTTON in wxOSX.

Use wxDD_DIR_MUST_EXIST, testing for wxDD_NEW_DIR_BUTTON always failed.

Closes #13596.

Note: See TracTickets for help on using tickets.