Fix the use of obsolete wxDD_NEW_DIR_BUTTON in wxOSX.

Use wxDD_DIR_MUST_EXIST, testing for wxDD_NEW_DIR_BUTTON always failed.

Closes #13596.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@72815 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775